[gd_scene load_steps=49 format=3 uid="uid://c6cc6rbxjdpwf"]

[ext_resource type="Script" path="res://Scripts/base_fur_tuft.gd" id="1_ltyh7"]
[ext_resource type="Texture2D" uid="uid://cuvvoh432bhc8" path="res://Sprites/FurTufts.png" id="2_7ehi4"]
[ext_resource type="AudioStream" uid="uid://byoark8olodhh" path="res://Audio/GGA_Douse (1).mp3" id="2_y0rb4"]
[ext_resource type="AudioStream" uid="uid://bx4g0jyel76lw" path="res://Audio/GGA_Douse (2).mp3" id="3_1d2sb"]
[ext_resource type="Texture2D" uid="uid://bm0qtuugralhg" path="res://Sprites/Fire.png" id="3_tpsgk"]
[ext_resource type="Texture2D" uid="uid://8r03g6mxlwub" path="res://Sprites/Stubble.png" id="3_vp5yd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ej4x1"]
atlas = ExtResource("2_7ehi4")
region = Rect2(0, 0, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6aws"]
atlas = ExtResource("2_7ehi4")
region = Rect2(500, 0, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2hn1"]
atlas = ExtResource("2_7ehi4")
region = Rect2(125, 0, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym0ph"]
atlas = ExtResource("2_7ehi4")
region = Rect2(625, 0, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyh1y"]
atlas = ExtResource("2_7ehi4")
region = Rect2(250, 200, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4x6e"]
atlas = ExtResource("2_7ehi4")
region = Rect2(750, 200, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6wnl"]
atlas = ExtResource("2_7ehi4")
region = Rect2(375, 200, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7av7k"]
atlas = ExtResource("2_7ehi4")
region = Rect2(875, 200, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nun2t"]
atlas = ExtResource("2_7ehi4")
region = Rect2(250, 0, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqu32"]
atlas = ExtResource("2_7ehi4")
region = Rect2(750, 0, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_006ut"]
atlas = ExtResource("2_7ehi4")
region = Rect2(375, 0, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ulji"]
atlas = ExtResource("2_7ehi4")
region = Rect2(875, 0, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t56md"]
atlas = ExtResource("2_7ehi4")
region = Rect2(0, 100, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e0cj"]
atlas = ExtResource("2_7ehi4")
region = Rect2(500, 100, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbxmm"]
atlas = ExtResource("2_7ehi4")
region = Rect2(125, 100, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xh31"]
atlas = ExtResource("2_7ehi4")
region = Rect2(625, 100, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_101u8"]
atlas = ExtResource("2_7ehi4")
region = Rect2(250, 100, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr7y2"]
atlas = ExtResource("2_7ehi4")
region = Rect2(750, 100, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4far6"]
atlas = ExtResource("2_7ehi4")
region = Rect2(375, 100, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmtew"]
atlas = ExtResource("2_7ehi4")
region = Rect2(875, 100, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov8fn"]
atlas = ExtResource("2_7ehi4")
region = Rect2(0, 200, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0wyy"]
atlas = ExtResource("2_7ehi4")
region = Rect2(500, 200, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf81s"]
atlas = ExtResource("2_7ehi4")
region = Rect2(125, 200, 125, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyqri"]
atlas = ExtResource("2_7ehi4")
region = Rect2(625, 200, 125, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_cdguo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej4x1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6aws")
}],
"loop": true,
"name": &"FurIdle0",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2hn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym0ph")
}],
"loop": true,
"name": &"FurIdle1",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyh1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4x6e")
}],
"loop": true,
"name": &"FurIdle10",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6wnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7av7k")
}],
"loop": true,
"name": &"FurIdle11",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nun2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqu32")
}],
"loop": true,
"name": &"FurIdle2",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_006ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ulji")
}],
"loop": true,
"name": &"FurIdle3",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t56md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e0cj")
}],
"loop": true,
"name": &"FurIdle4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbxmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xh31")
}],
"loop": true,
"name": &"FurIdle5",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_101u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dr7y2")
}],
"loop": true,
"name": &"FurIdle6",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4far6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmtew")
}],
"loop": true,
"name": &"FurIdle7",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov8fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0wyy")
}],
"loop": true,
"name": &"FurIdle8",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf81s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyqri")
}],
"loop": true,
"name": &"FurIdle9",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_w2bv0"]
atlas = ExtResource("3_vp5yd")
region = Rect2(242, 0, 121, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nnir"]
atlas = ExtResource("3_vp5yd")
region = Rect2(242, 100, 121, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq337"]
atlas = ExtResource("3_vp5yd")
region = Rect2(0, 0, 121, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5adb"]
atlas = ExtResource("3_vp5yd")
region = Rect2(0, 100, 121, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yco2"]
atlas = ExtResource("3_vp5yd")
region = Rect2(121, 0, 121, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnihq"]
atlas = ExtResource("3_vp5yd")
region = Rect2(121, 100, 121, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_vbpwu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2bv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nnir")
}],
"loop": true,
"name": &"Stubble0",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq337")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5adb")
}],
"loop": true,
"name": &"Stubble1",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yco2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnihq")
}],
"loop": true,
"name": &"Stubble2",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xxi5n"]
atlas = ExtResource("3_tpsgk")
region = Rect2(0, 0, 121, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_okr4f"]
atlas = ExtResource("3_tpsgk")
region = Rect2(0, 100, 121, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay4nu"]
atlas = ExtResource("3_tpsgk")
region = Rect2(121, 0, 121, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgfr0"]
atlas = ExtResource("3_tpsgk")
region = Rect2(121, 100, 121, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue764"]
atlas = ExtResource("3_tpsgk")
region = Rect2(242, 0, 121, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r50ce"]
atlas = ExtResource("3_tpsgk")
region = Rect2(242, 100, 121, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_cbuw5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxi5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okr4f")
}],
"loop": true,
"name": &"FireIdle0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay4nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgfr0")
}],
"loop": true,
"name": &"FireIdle1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue764")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r50ce")
}],
"loop": true,
"name": &"FireIdle2",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_u1h55"]
radius = 123.693

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_505l6"]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ogwl2"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
initial_velocity_min = 121.08
initial_velocity_max = 370.5
gravity = Vector3(0, 1000, 0)
scale_min = 0.25
scale_max = 0.5
anim_offset_max = 1.0

[node name="BaseFurTuft" type="Area2D"]
collision_layer = 5
collision_mask = 2
script = ExtResource("1_ltyh7")

[node name="GgaDouse(1)" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_y0rb4")

[node name="GgaDouse(2)" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1d2sb")

[node name="FurNormal" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_cdguo")
animation = &"FurIdle11"
autoplay = "FurIdle0"

[node name="Stubble" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -13)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_vbpwu")
animation = &"Stubble0"
autoplay = "Stubble0"
frame_progress = 0.547765

[node name="Fire" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_cbuw5")
animation = &"FireIdle0"
autoplay = "FireIdle0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.0666667, 0.0666667)
shape = SubResource("CircleShape2D_u1h55")

[node name="FurShaveParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_505l6")
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_ogwl2")
texture = ExtResource("2_7ehi4")
lifetime = 3.0
one_shot = true
explosiveness = 1.0

[node name="FireParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_505l6")
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_ogwl2")
texture = ExtResource("2_7ehi4")
lifetime = 3.0
one_shot = true
explosiveness = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
